# marketmind

./: .gitignore  README.md  plan.md  progress.md
backend/: agent.py  agent_sdk_version.py  main.py  pyproject.toml
frontend/: FRONTEND.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/dashboard/: page.tsx
frontend/app/economics/: page.tsx
frontend/app/markets/: page.tsx
frontend/components/: ChatPanel.tsx  ChatRail.tsx  MarketCard.tsx  PriceChart.tsx  TopNav.tsx
mcp-server/: main.py  package.json  pyproject.toml  test_fred.py
scripts/: capture-demo.mjs  package.json
